--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@outreach/extensibility-sdk": "^0.9.7",
     "axios": "^1.5.1",
     "next": "13.5.5",
     "react": "^18",
